# ASDfR

./: cam2image.yaml  hsv_find.py  stats.py
Assignment1/src/: README.md
Assignment1/src/RELbot_simulator/include/: DynamicsSimulation.hpp  RELbot_simulator.hpp
Assignment1/src/RELbot_simulator/launch/: RELbot_simulator.launch.py
Assignment1/src/RELbot_simulator/src/: DynamicsSimulation.cpp  RELbot_simulator.cpp
Assignment1/src/camera_processing/: CMakeLists.txt
Assignment1/src/camera_processing/src/: object_position.cpp
Assignment1/src/image_tools_sdfr/: CMakeLists.txt
Assignment1/src/image_tools_sdfr/src/: base64.hpp  policy_maps.hpp  remote_capture.hpp  showimage.cpp
Assignment1/src/launch/: launch_1.1.2.py  launch_1.1.4.py  launch_1.2.2.py  launch_1.2.3.py
Assignment1/src/sequence_controller/src/: sequence_controller_node_steady.cpp
Assignment2/: README.md  measurements_ros2_nodes_w_stress.txt  measurements_ros2_nodes_wo_stress.txt
Assignment2/src/launch/: launch_timing.py
Assignment2/src/timing/: CMakeLists.txt  package.xml
Assignment2/src/timing/src/: Loop18.cpp  Seq18.cpp
Assignment2/timing_21/: Makefile  measurements_w_stress.txt  measurements_wo_stress.txt  timing_2.1.cpp  timing_21  timing_21.cpp
Assignment2/timing_22/: Makefile  measurements.txt  measurements_w_stress.txt  measurements_wo_stress.txt  timing_22  timing_22.cpp
Assignment3/: RosXenoBridge.bash
Assignment3-2/: README.md  cam2image.yaml
Assignment3-2/src/image_tools_sdfr/: CHANGELOG.rst  Doxyfile  package.xml
Assignment3-2/src/image_tools_sdfr/include/image_tools_sdfr/: cv_mat_sensor_msgs_image_type_adapter.hpp
Assignment3-2/src/image_tools_sdfr/src/: cam2image.cpp  cv_mat_sensor_msgs_image_type_adapter.cpp
Assignment3-2/src/sequence_controller/src/: sequence_controller_node_moving.cpp
Assignment3-3/: README.md
Assignment3-3/src/camera_processing/src/: object_position.cpp
Assignment3-3/src/custom_msgs/: package.xml
Assignment3-3/src/launch/: launch.py
Assignment3-3/src/ros_xeno_bridge/: package.xml
Assignment3-3/src/sequence_controller/: CMakeLists.txt
Assignment3-3/src/sequence_controller/src/: sequence_controller.cpp
Assignment3-3/src/xeno_thread/controller/: LoopController.cpp
Assignment3-3/src/xeno_thread/controller/common/: EulerAngles.cpp  xxinteg.cpp  xxinteg.h  xxmatrix.h
Assignment3-3/src/xeno_thread/controller/project/VS2010/: LoopController.vcxproj
Assignment3-3/src/xeno_thread/controller/project/VS2015/: LoopController.vcxproj
Assignment3-3/src/xeno_thread/controller/project/VS2017/: LoopController.sln  LoopController.vcxproj
Assignment3-3/src/xeno_thread/include/: Native20Sim.h
Assignment3-3/src/xeno_thread/myApp/src/: MyApp.cpp
Assignment3-3/src/xeno_thread/src/: Native20Sim.cpp  NativeBase.cpp
Assignment3-4/: README.md
Assignment3-4/src/launch/: launch.py
Assignment3-4/src/ros_xeno_bridge/: CMakeLists.txt
Assignment3-4/src/sequence_controller/: CMakeLists.txt
Assignment3-4/src/sequence_controller/src/: sequence_controller.cpp
Assignment3-4/src/xeno_thread/controller/: LoopController.h  LoopController.info  RELbotSimple.emx
Assignment3-4/src/xeno_thread/controller/common/: EulerAngles.h  xxfuncs.cpp  xxmodel.h  xxtypes.h
Assignment3-4/src/xeno_thread/include/: ico_io_v2.h
Assignment3-4/src/xeno_thread/myApp/src/: MyApp.cpp
Assignment3-5/: README.md
Assignment3-5/include/: config.h
Assignment3-5/src/camera_processing/: package.xml
Assignment3-5/src/ros_xeno_bridge/include/: RosXenoBridge.hpp
Assignment3-5/src/ros_xeno_bridge/src/: RosXenoBridge.cpp
Assignment3-5/src/sequence_controller/src/: sequence_controller.cpp
Assignment3-5/src/xeno_thread/: main.cpp
Assignment3-5/src/xeno_thread/controller/: LoopController_tokens.xml
Assignment3-5/src/xeno_thread/controller/common/: MotionProfiles.h  xxinverse.cpp  xxinverse.h
Assignment3-5/src/xeno_thread/include/: NativeBase.h
Assignment3-5/src/xeno_thread/myApp/include/: MyApp.h
Assignment3-5/src/xeno_thread/myApp/src/: MyApp.cpp
Assignment3-5/src/xeno_thread/src/: ico_io_v2.cpp
Assignment3/src/camera_processing/: CMakeLists.txt
Assignment3/src/camera_processing/src/: object_position.cpp
Assignment3/src/custom_msgs/: CMakeLists.txt
Assignment3/src/launch/: launch.py
Assignment3/src/ros_xeno_bridge/src/: RosXenoBridge.cpp
Assignment3/src/sequence_controller/: CMakeLists.txt  package.xml
Assignment3/src/sequence_controller/src/: sequence_controller.cpp
Assignment3/src/xeno_thread/: CMakeLists.txt
Assignment3/src/xeno_thread/controller/: LoopController.cpp  test_LoopController.cpp
Assignment3/src/xeno_thread/controller/common/: MotionProfiles.cpp  xxfuncs.h  xxmatrix.cpp
Assignment3/src/xeno_thread/controller/project/VS2005/: LoopController.vcproj
Assignment3/src/xeno_thread/controller/project/VS2013/: LoopController.vcxproj
Assignment3/src/xeno_thread/controller/project/VS2015/: LoopController.sln
Assignment3/src/xeno_thread/controller/project/VS2017/: LoopController.vcxproj.filters
Assignment3/src/xeno_thread/controller/project/VS2019/: LoopController.vcxproj
Assignment3/src/xeno_thread/include/: runnableClass.h
Assignment3/src/xeno_thread/myApp/include/: MyApp.h
Assignment3/src/xeno_thread/myApp/src/: MyApp.cpp
launch/: launch_1.2.3.py
src/RELbot_simulator/: CMakeLists.txt  package.xml
src/RELbot_simulator/src/: RELbot_simulator.cpp
src/camera_processing/: CMakeLists.txt
src/camera_processing/src/: brightness_node.cpp  brightness_sub.cpp  image_sub.cpp  light_position.cpp  light_position_relbot.cpp  light_position_sub.cpp
src/image_tools_sdfr/include/image_tools_sdfr/: visibility_control.h
src/image_tools_sdfr/src/: remote_capture.cpp
src/launch/: launch_1.1.3.py  launch_1.2.1.py  launch_1.2.2.py  launch_1.2.3.py
src/sequence_controller/: CMakeLists.txt  package.xml
src/sequence_controller/src/: sequence_controller_node.cpp  sequence_controller_node_moving.cpp  sequence_controller_node_steady.cpp  setpoint_generator_node.cpp
(+10 files in other folders)
