<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <!-- Project details -->
  <name>ros_xeno_bridge</name>
  <version>0.0.0</version>
  <description>Your Description</description>
  
  <!-- Creator info & license -->
  <maintainer email="i.raoudi@student.utwente.nl">john</maintainer>
  <license>Apache License 2.0</license>

  <!-- Don't touch-->
  <buildtool_depend>ament_cmake</buildtool_depend> 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!--Required dependencies-->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>custom_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <!-- Don't touch-->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
